--- a/app/view/index.ejs
+++ b/app/view/index.ejs
@@ -49,10 +49,10 @@
                                             <a class="nav-link" href="cadastro-sala">Cadastrar Sala</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">Agendar</a>
+                                            <a class="nav-link" href="agenda">Agenda</a>
                                         </li>
                                         <li>
-                                            <a href="#" id='btLogin' class="btn btn-outline-light top-btn" data-toggle="modal" data-target="#login-modal" > Logoff nok</a>
+                                            <a href="#" id='btLogin' class="btn btn-outline-light top-btn" data-toggle="modal" data-target="#login-modal" > Logoff</a>
                                         </li>
                                     <% } else { %>
                                         <li>
