--- a/app/view/agenda.ejs
+++ b/app/view/agenda.ejs
@@ -12,7 +12,7 @@
         <!-- Favicons -->
         <link rel="shortcut icon" href="#">
         <!-- Page Title -->
-        <title>Cadastrar Sala</title>
+        <title>Cadastrar Estúdio</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <!-- Google Fonts -->
@@ -44,7 +44,7 @@
                         <nav class="navbar navbar-expand-lg navbar-light">
                             <a class="navbar-brand" href="index.html">Portal Música</a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" 	aria-label="Toggle navigation">
-                            <span class="icon-menu"></span>
+                                <span class="icon-menu"></span>
                             </button>
                             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                                 <ul class="navbar-nav">
@@ -76,64 +76,60 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <h5>Cadastrar Sala</h5><br>
-                        <p class="reserve-description">Cadastre as informações da sala do estúdio.</p>
-                    </div>
-            </div>
-        </section>
-        <!--//END RESERVE A SEAT -->
-        <!--============================= BOOKING DETAILS =============================-->
-        <section class="light-bg booking-details_wrap">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 responsive-wrap">
-                        <!-- DESCROCAO E CHECKBOX -->
-                        
-                        <div class="booking-checkbox_wrap">	
-                            <form method="POST" action="/cadastro-sala">
-                                <div class="col-5">
-                                    <label for="id_estudio">Estúdio</label>
-                                    <select class="form-control" id="id_estudio" name="id_estudio" required>
-                                        <option value="0">Selecione Estúdio</option>
-                                        <% if(estudios.length > 0) { %>
-                                            <% for(var i = 0; i < estudios.length; i++) { %>
-                                                <option value="<%= estudios[i].id_estudio %>"><%= estudios[i].nomeEstudio %></option>
-                                            <% } %>
-                                        <% } %>
-                                    </select>
-                                </div>
-                                <div class="col-5">
-                                    <label for="nome_sala">Nome da Sala</label>
-                                    <input class="form-control" id="nome_sala" type="text" name="nome_sala" required>
-                                </div>
-                                <div class="col-5">
-                                    <label for="valor_sala">Preço por hora</label>
-                                    <input class="form-control" id="valor_sala" type="text" name="valor_sala" required>
-                                </div>
-                                <div class="col-5">
-                                    <label for="equipamento">Equipamentos</label>
-                                    <!-- SPLIT PARA SEPARAR OS EQUIPAMENTOS, PODE SALVAR COMO UMA STRING SO E DA SPLIT QUANDO FOR MEXER -->
-                                    <input class="form-control" id="equipamento" type="text" name="equipamento" placeholder='separe os equipamentos por virgula' required>
-                                </div>
-                                <br/>
-                                <button type="submit" class="btn btn-primary">Cadastrar Sala</button>
-                            </form>
-                        </div>
-                        <!-- END //DESCROCAO E CHECKBOX -->
+                        <h5>Agenda</h5><br>
+                        <p class="reserve-description">Aqui você pode visualizar todos os seus agendamentos!</p>
                     </div>
                 </div>
             </div>
         </section>
-        <!--//END BOOKING DETAILS -->
-        <!--============================= FOOTER =============================-->
+        <!--//END RESERVE A SEAT -->
+        <section class="light-bg booking-details_wrap">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 responsive-wrap">
+                        <div class="booking-checkbox_wrap">	
+                            <div class="row d-flex">
+                                <table class="table">
+                                    <thead class="thead-light">
+                                        <tr>
+                                            <th scope="col">#</th>
+                                            <th scope="col">Estúdio</th>
+                                            <th scope="col">Sala</th>
+                                            <th scope="col">Músico</th>
+                                            <th scope="col">Serviço</th>
+                                            <th scope="col">Data Agendamento</th>
+                                            <th scope="col">Descrição</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <% if(agendamentos.length > 0) { %>
+                                            <% for(var i = 0; i < agendamentos.length; i++) { %>
+                                                <tr>
+                                                    <th scope="row"><%= agendamentos[i].id %></th>
+                                                    <td><%= agendamentos[i].estudio %></td>
+                                                    <td><%= agendamentos[i].sala %></td>
+                                                    <td><%= agendamentos[i].musico %></td>
+                                                    <td><%= agendamentos[i].servico %></td>
+                                                    <td><%= agendamentos[i].data_agendamento %></td>
+                                                    <td><%= agendamentos[i].descricao %></td>
+                                                    <!-- <td>agendamentos[i].id</td> -->
+                                                </tr>
+                                            <% } %>
+                                        <% } %>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <footer class="main-block dark-bg">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="copyright">
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             <p>Copyright &copy; 2018 Listing. All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             <ul>
                                 <li><a href="#"><span class="ti-facebook"></span></a></li>
                                 <li><a href="#"><span class="ti-twitter-alt"></span></a></li>
@@ -144,53 +140,5 @@
                 </div>
             </div>
         </footer>
-        <!--//END FOOTER -->
-        
-        <!-- jQuery, Bootstrap JS. -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="js/jquery-3.2.1.min.js"></script>
-        <script src="js/popper.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <!-- Magnific popup JS -->
-        <script src="js/jquery.magnific-popup.js"></script>
-        
-        <!-- Swipper Slider JS -->
-        <script src="js/swiper.min.js"></script>
-        
-        <script>
-            var swiper = new Swiper('.swiper-container', {
-                slidesPerView: 3,
-                slidesPerGroup: 3,
-                loop: true,
-                loopFillGroupWithBlank: true,
-                pagination: {
-                    el: '.swiper-pagination',
-                    clickable: true,
-                },
-                navigation: {
-                    nextEl: '.swiper-button-next',
-                    prevEl: '.swiper-button-prev',
-                },
-            });
-        </script>
-        <script>
-            if ($('.image-link').length) {
-                $('.image-link').magnificPopup({
-                    type: 'image',
-                    gallery: {
-                        enabled: true
-                    }
-                });
-            }
-            if ($('.image-link2').length) {
-                $('.image-link2').magnificPopup({
-                    type: 'image',
-                    gallery: {
-                        enabled: true
-                    }
-                });
-            }
-        </script>
     </body>
-
 </html>
