--- a/app/view/listarEstudios.ejs
+++ b/app/view/listarEstudios.ejs
@@ -47,10 +47,10 @@
                                         <a class="nav-link" href="cadastro-sala">Cadastrar Sala</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Agendar</a>
+                                        <a class="nav-link" href="agenda">Agendar</a>
                                     </li>
                                     <li>
-                                        <a href="#" id='btLogin' class="btn btn-outline-light top-btn" data-toggle="modal" data-target="#login-modal" > Logoff nok</a>
+                                        <a href="#" id='btLogin' class="btn btn-outline-light top-btn" data-toggle="modal" data-target="#login-modal" > Logoff</a>
                                     </li>
                                 </ul>
                             </div>
