--- a/app/view/agenda.ejs
+++ b/app/view/agenda.ejs
@@ -42,7 +42,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
-                            <a class="navbar-brand" href="index.html">Portal Música</a>
+                            <a class="navbar-brand" href="/">Portal Música</a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" 	aria-label="Toggle navigation">
                                 <span class="icon-menu"></span>
                             </button>
@@ -98,6 +98,8 @@
                                             <th scope="col">Músico</th>
                                             <th scope="col">Serviço</th>
                                             <th scope="col">Data Agendamento</th>
+                                            <th scope="col">Horário Inicio</th>
+                                            <th scope="col">Horário Fim</th>
                                             <th scope="col">Descrição</th>
                                         </tr>
                                     </thead>
@@ -111,8 +113,9 @@
                                                     <td><%= agendamentos[i].musico %></td>
                                                     <td><%= agendamentos[i].servico %></td>
                                                     <td><%= agendamentos[i].data_agendamento %></td>
+                                                    <td><%= agendamentos[i].hora_inicio %></td>
+                                                    <td><%= agendamentos[i].hora_fim %></td>
                                                     <td><%= agendamentos[i].descricao %></td>
-                                                    <!-- <td>agendamentos[i].id</td> -->
                                                 </tr>
                                             <% } %>
                                         <% } %>
