--- a/app/view/detalheEstudio.ejs
+++ b/app/view/detalheEstudio.ejs
@@ -68,7 +68,7 @@
     <div>
         <!-- Swiper -->
         <div class="swiper-container">
-            <div class="swiper-wrapper">
+            <!-- <div class="swiper-wrapper">
 
                 <div class="swiper-slide">
                     <a href="images/reserve-slide2.jpg" class="grid image-link">
@@ -100,7 +100,7 @@
                         <img src="images/reserve-slide3.jpg" class="img-fluid" alt="#">
                     </a>
                 </div>
-            </div>
+            </div> -->
             <!-- Add Pagination -->
             <div class="swiper-pagination swiper-pagination-white"></div>
             <!-- Add Arrows -->
@@ -117,21 +117,21 @@
                     <% if(estudio.length > 0) { %>
                         <h5><%= estudio[0].nomeEstudio %></h5><br>
                     <% } %>
-                    <p class="reserve-description">Faça reservas, veja detalhes, comente, interaja.</p>
+                    <p class="reserve-description"><%= estudio[0].descricao %></p>
                 </div>
-                <div class="col-md-6">
+                <!-- <div class="col-md-6">
                     <div class="reserve-seat-block">
-						<!--
+						
                         <div class="reserve-rating">
                             <span>9.5</span>
                         </div>
-						-->
+						
                         <div class="review-btn">
                             <a href="#" class="btn btn-outline-danger">Escreva uma Avaliação</a>
                             <span>34 reviews</span>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -140,7 +140,7 @@
     <section class="light-bg booking-details_wrap">
         <div class="container">
             <div class="row">
-                <div class="col-md-8 responsive-wrap">
+                <div class="col-md-12 responsive-wrap">
                     <div class="booking-checkbox_wrap">
                         <div class="booking-checkbox">
                             <!-- <p>Estudio inaugurado em 2005, tendo desde sua criação como principal objetivo a gravação de bandas para o mundo profissional da música.</p>
@@ -177,7 +177,7 @@
                             <hr>
 						</div>
                     </div>
-                    <div class="booking-checkbox_wrap mt-4">
+                    <!-- <div class="booking-checkbox_wrap mt-4">
                         <h5>34 Reviews</h5>
                         <hr>
                         <div class="customer-review_wrap">
@@ -242,15 +242,15 @@
                                 <a href="#"><span class="icon-like"></span>Helpful</a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
 				
 				<!-- MAPA do estudio -->
-                <div class="col-md-4 responsive-wrap">
+                <!-- <div class="col-md-4 responsive-wrap">
                     <div class="contact-info">
                         <img src="images/map.jpg" class="img-fluid" alt="#">	
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
