ajustes finais, ainda falta deixar detalhe estudio mais bonita

--- a/app/view/agenda.ejs
+++ b/app/view/agenda.ejs
@@ -58,7 +58,7 @@
                                         <a class="nav-link" href="agenda">Agenda</a>
                                     </li>
                                     <li>
-                                        <a href="#" id='btLogin' class="btn btn-outline-light top-btn" data-toggle="modal" data-target="#login-modal" > Logoff</a>
+                                        <a href="/" id='btLogin' class="btn btn-outline-light top-btn" data-toggle="modal" data-target="#login-modal" > Logoff</a>
                                     </li>
                                 </ul>
                             </div>
