--- a/app/view/detalheSala.ejs
+++ b/app/view/detalheSala.ejs
@@ -42,7 +42,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
-                            <a class="navbar-brand" href="index.html">Portal Música</a>
+                            <a class="navbar-brand" href="/">Portal Música</a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" 	aria-label="Toggle navigation">
                             <span class="icon-menu"></span>
                             </button>
@@ -58,7 +58,7 @@
                                         <a class="nav-link" href="agenda">Agenda</a>
                                     </li>
                                     <li>
-                                        <a href="#" id='btLogin' class="btn btn-outline-light top-btn" data-toggle="modal" data-target="#login-modal" > Logoff</a>
+                                        <a href="/" id='btLogin' class="btn btn-outline-light top-btn" data-toggle="modal" data-target="#login-modal" > Logoff</a>
                                     </li>
                                 </ul>
                             </div>
@@ -74,7 +74,7 @@
         <div class="swiper-container">
             <div class="swiper-wrapper">
 
-                <div class="swiper-slide">
+                <!-- <div class="swiper-slide">
                     <a href="images/reserve-slide2.jpg" class="grid image-link">
                         <img src="images/reserve-slide2.jpg" class="img-fluid" alt="#">
                     </a>
@@ -103,7 +103,7 @@
                     <a href="images/reserve-slide3.jpg" class="grid image-link">
                         <img src="images/reserve-slide3.jpg" class="img-fluid" alt="#">
                     </a>
-                </div>
+                </div> -->
             </div>
             <!-- Add Pagination -->
             <div class="swiper-pagination swiper-pagination-white"></div>
@@ -197,10 +197,11 @@
 							  </label>
 							</div>
 							-->
-							<input type="text" class="form-control" id="horarioFuncionamento" name='horarioFuncionamento' placeholder="" readonly>
+							<input type="text" class="form-control" id="horarioFuncionamento" name='horarioFuncionamento' placeholder="" readonly required>
 							</div>
-							<br/>
-							<button type="submit" class="btn btn-primary">Submit</button>
+                            <br/>
+                            <hr>
+							<button type="submit" class="btn btn-primary">Agendar</button>
 						</form>
                     </div>
 					<!-- END //DESCROCAO E CHECKBOX -->
