--- a/app/view/cadastrarEstudio.ejs
+++ b/app/view/cadastrarEstudio.ejs
@@ -42,7 +42,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
-                            <a class="navbar-brand" href="index.html">Portal Música</a>
+                            <a class="navbar-brand" href="/">Portal Música</a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" 	aria-label="Toggle navigation">
                                 <span class="icon-menu"></span>
                             </button>
@@ -58,7 +58,7 @@
                                         <a class="nav-link" href="agenda">Agenda</a>
                                     </li>
                                     <li>
-                                        <a href="#" id='btLogin' class="btn btn-outline-light top-btn" data-toggle="modal" data-target="#login-modal" > Logoff</a>
+                                        <a href="/" id='btLogin' class="btn btn-outline-light top-btn" data-toggle="modal" data-target="#login-modal" > Logoff</a>
                                     </li>
                                 </ul>
                             </div>
@@ -166,7 +166,7 @@
                                         <input type="text" class="form-control" id="horarioFuncionamento" name='horarioFuncionamento' placeholder="" readonly>
                                     </div>
                                     </br></br>
-                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                    <button type="submit" class="btn btn-primary">Cadastrar Estúdio</button>
                                 </form>
                             </div>
                             <!--
