--- a/app/view/index.ejs
+++ b/app/view/index.ejs
@@ -35,7 +35,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
-                            <a class="navbar-brand" href="index.html">Portal Música</a>
+                            <a class="navbar-brand" href="/">Portal Música</a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 								<span class="icon-menu"></span>
 							</button>
@@ -52,11 +52,11 @@
                                             <a class="nav-link" href="agenda">Agenda</a>
                                         </li>
                                         <li>
-                                            <a href="#" id='btLogin' class="btn btn-outline-light top-btn" data-toggle="modal" data-target="#login-modal" > Logoff</a>
+                                            <a href="/" id='btLogin' class="btn btn-outline-light top-btn" data-toggle="modal" data-target="#login-modal" > Logoff</a>
                                         </li>
                                     <% } else { %>
                                         <li>
-                                            <a href="#" id='btLogin' class="btn btn-outline-light top-btn" data-toggle="modal" data-target="#login-modal" > Login</a>
+                                            <a href="/" id='btLogin' class="btn btn-outline-light top-btn" data-toggle="modal" data-target="#login-modal" > Login</a>
                                         </li>
                                     <% } %>
                                 </ul>
