--- a/app/view/detalheEstudio.ejs
+++ b/app/view/detalheEstudio.ejs
@@ -117,7 +117,7 @@
                     <% if(estudio.length > 0) { %>
                         <h5><%= estudio[0].nomeEstudio %></h5><br>
                     <% } %>
-                    <p class="reserve-description"><%= estudio[0].descricao %></p>
+                    <!-- <p class="reserve-description"><%= estudio[0].descricao %></p> -->
                 </div>
                 <!-- <div class="col-md-6">
                     <div class="reserve-seat-block">
