--- a/app/view/detalheSala.ejs
+++ b/app/view/detalheSala.ejs
@@ -329,7 +329,7 @@
 				
 				$("#horarioFuncionamento").prop("disabled", true);
 				
-				alert("tentou submitar: " + $("#horarioFuncionamento").prop("disabled"));
+				// alert("tentou submitar: " + $("#horarioFuncionamento").prop("disabled"));
 				
 				//https://stackoverflow.com/questions/17809056/how-to-add-additional-fields-to-form-before-submit
 				$('<input />').attr('type', 'hidden')
