--- a/app/view/agenda.ejs
+++ b/app/view/agenda.ejs
@@ -132,7 +132,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="copyright">
-                            <p>Copyright &copy; 2018 Listing. All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
+                            <p>Copyright &copy; 2018 Listing. All rights reserved </p>
                             <ul>
                                 <li><a href="#"><span class="ti-facebook"></span></a></li>
                                 <li><a href="#"><span class="ti-twitter-alt"></span></a></li>
