--- a/app/view/listarEstudios.ejs
+++ b/app/view/listarEstudios.ejs
@@ -62,7 +62,7 @@
     <!--//END HEADER -->
     <!--============================= DETAIL =============================-->
     <section>
-        <div class="container-fluid">
+        <div class="container-fluid" style='min-height:600px;position:relative'>
             <div class="row">
                 <div class="col-md-7 responsive-wrap">
 				<!--
@@ -296,6 +296,7 @@
 						-->
                     </div>
                 </div>
+				
                 <div class="col-md-5 responsive-wrap map-wrap">
                     <div class="map-fix">
                         <!-- data-toggle="affix" -->
@@ -314,7 +315,7 @@
                 <div class="col-md-12">
                     <div class="copyright">
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        <p>Copyright &copy; 2018 Listing. All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
+                        <p>Copyright &copy; 2018 Listing. All rights reserved </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         <ul>
                             <li><a href="#"><span class="ti-facebook"></span></a></li>
