--- a/app/view/listarEstudios.ejs
+++ b/app/view/listarEstudios.ejs
@@ -12,7 +12,7 @@
     <!-- Favicons -->
     <link rel="shortcut icon" href="#">
     <!-- Page Title -->
-    <title>Listing &amp; Directory Website Template</title>
+    <title>Listagem</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Google Fonts -->
@@ -309,7 +309,7 @@
     </section>
     <!--//END DETAIL -->
     <!--============================= FOOTER =============================-->
-    <footer class="main-block dark-bg">
+    <footer id="idFooter" class="main-block dark-bg">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
