--- a/app/view/index.ejs
+++ b/app/view/index.ejs
@@ -78,7 +78,7 @@
                             <div class="col-md-12">
                                 <div class="slider-content_wrap">
 								</br></br>
-                                    <span id='tituloIndex'>Encontre Estúdios, Professores de musíca e Musícos.</span>
+                                    <span id='tituloIndex'>Encontre Estúdios, Professores de música e Músicos.</span>
                                 </div>
                             </div>
                         </div>
